# WIP-Sound-Mod

./: .gitignore  README.md  build_project.sh  gradle.properties  settings.gradle.kts
fabric/: build.gradle.kts
fabric/src/main/java/net/randomscientist/soundmod/: SoundMod.java  SoundModClient.java
fabric/src/main/java/net/randomscientist/soundmod/mixins/: ChunkSectionAccessor.java  (+6 more)
fabric/src/main/resources/: fabric.mod.json  soundmod.mixins.json
rust/: Cargo.toml  design.md
rust/native/: Cargo.toml  build.gradle.kts
rust/native-jni/: Cargo.toml  build.gradle.kts
rust/native-jni/src/: api.rs  lib.rs  static_sound.rs
rust/native/src/: lib.rs
rust/native/src/gpu/: buffer.rs  mod.rs
rust/native/src/gpu/shaders/: shared.wgsl
rust/native/src/gpu/trace/: chunk.rs  mod.rs  uniforms.rs  world.rs
rust/native/src/interface/: mod.rs
rust/native/src/interface/sound/: data.rs  mod.rs  resource.rs  static.rs
rust/native/src/playback/: mod.rs
rust/native/src/shaders/: shared.wgsl
soundmod/: build.gradle  gradle.properties
soundmod-natives/: Cargo.toml
soundmod-natives/src/: commands.rs  lib.rs
soundmod/src/main/java/net/randomscientist/soundmod/: SoundMod.java
soundmod/src/main/resources/: fabric.mod.json  soundmod.accesswidener  soundmod.mixins.json
xcode/soundmod/: lldbinit
xcode/soundmod/soundmod.xcodeproj/: project.pbxproj
xcode/soundmod/soundmod.xcodeproj/xcuserdata/charles.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/soundmod/soundmod.xcodeproj/xcuserdata/charles.xcuserdatad/xcschemes/: xcschememanagement.plist
(+18 files in other folders)
