[package]
name = "native-jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
jni_fn = "0.1.0"
once_cell = "1.17.1"
send_wrapper = "0.6.0"
crossbeam = "0.8.2"
[dependencies.soundmod-native]
path = "../native"
[lib]
crate-type = ["cdylib"]
