[package]
name = "soundmod-native"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16.0"
glam = {version = "0.24.0", features = ["bytemuck"] }
cpal = "0.15.2"
crossbeam = "0.8.2"
symphonia = {version = "0.5.2", features = ["symphonia-format-ogg", "symphonia-codec-vorbis"]}
anyhow = "1.0.70"
thiserror = "1.0.40"
lru = "0.10.0"
once_cell = "1.17.1"
samplerate-rs = "0.1.0"
bytemuck = {version = "1.13.1", features = ["min_const_generics", "derive"]}
winit = "0.28.5"
env_logger = "0.10"
log = "0.4"
pollster = "0.3.0"
futures-intrusive = "0.5.0"
image = "0.24.6"
